--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -416,7 +416,7 @@
       ],
          rounds: [{label: '书', duration: 1}, {label: '复习概念+例题', duration: 1},{label: '做基础题', duration: 2}, {label: '总结', duration: 1}, {label: '做提高题', duration: 2},{label: '复习错题', duration: 1}, {label: '复习笔记', duration: 1}
         ],
-      restDays: '2025-12-14,,2025-12-21,2025-12-27,,2025-12-29,,2025-12-31,2026-01-02,2026-01-03,2026-01-01,2026-01-07,2026-01-09,2026-01-14,2026-01-18,2026-01-21,2026-01-22,2026-01-28,2026-01-29,2026-02-06,2026-02-09'
+      restDays: '2025-12-14,,2025-12-21,2025-12-27,,2025-12-29,,2025-12-31,2026-01-02,2026-01-03,2026-01-01,2026-01-07,2026-01-09,2026-01-010,2026-01-11,2026-01-12,2026-01-13,2026-01-14,2026-01-18,2026-01-22,2026-01-28,2026-01-29,2026-02-06,2026-02-09'
 
     },
     writeMo: {
@@ -437,7 +437,7 @@
         //{name: '057', duration: 1}, {name: '058', duration: 1}, {name: '059', duration: 1}, {name: '060', duration: 1}
       ],
       rounds: ['听', '读', '背', '中译英', '中译英', '默写1', '默写2'],
-      restDays: '22025-12-22,2025-12-24,2025-12-26,2025-12-28,2025-12-30,2025-12-31,2026-01-01,2026-01-02,2026-01-01,2026-01-03,2026-01-05,2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15'
+      restDays: '22025-12-22,2025-12-24,2025-12-26,2025-12-28,2025-12-30,2025-12-31,2026-01-01,2026-01-02,2026-01-01,2026-01-03,2026-01-05,2026-01-07,2026-01-08,2026-01-10,2026-01-12,2026-01-09,2026-01-11,2026-01-13,2026-01-14'
 
     },
     'lowFrequencyWords&PEMo': {
